    * 4321 FIX: LDAP: Improved validation of groups to attributes sync plugin
    * 4048 FIX: Fixed bug in tables: the notification message for reached row limits is visible again
    * 4049 FIX: Fixed cut-off of bulk options when row-limit is reached.
    * 4025 FIX: BI Aggregations: No longer suppressing error messages for invalid configured BI rules...

    WATO:
    * 4142 New extended search dialog for rulesets and rules...
    * 4217 WATO rules can now be moved via drag&drop...
    * 4227 New manual WATO configuration lock mechanism...
    * 4018 WATO WebAPI: new functions to manage host, service and contactgroups...
    * 4319 Reworked the service discovery dialog...
    * 4320 Distributed: Master site has now also site specific global settings...
    * 4022 Removed no longer supported (hidden) WATO feature: wato_hidden_users
    * 4023 WATO Web API: Now able to add/edit/delete htpasswd users...
    * 4003 FIX: esx_vsphere_objects: fixed check parameters display bug during WATO service discovery
    * 4146 FIX: Fixed broken "Global settings" when having the Event Console disabled via "omd config"
    * 4218 FIX: Disabling replication with a site did not clear the changes for this site (1.4.0i3 regression)
    * 4221 FIX: Fixed "analyse parameters" page for services with umlauts in names
    * 4222 FIX: Services of host page: Fixed encoding issue for hosts with umlauts in alias
    * 4223 FIX: Fixed possible g_host_attribute related AttributeError exception
    * 4224 FIX: Improved exception handling during WATO slave site activation
    * 4237 FIX: Fixed rendering of old timestamps...
    * 4231 FIX: Fixed broken host renaming when files are in var/check_mk/web
    * 4317 FIX: Rule list: Removed the row limit of the rule tables
    * 4318 FIX: Rule editor: Fixed wrong default value for yes/no rulesets
    * 4323 FIX: Fixed wrong %s in notification rule title deletion confirm dialog