@@ -131,6 +131,7 @@
     * 4048 FIX: Fixed bug in tables: the notification message for reached row limits is visible again
     * 4049 FIX: Fixed cut-off of bulk options when row-limit is reached.
     * 4025 FIX: BI Aggregations: No longer suppressing error messages for invalid configured BI rules...
+    * 4330 FIX: Tactical overview: Show data of core even when Event Console is currently not reachable...
 
     WATO:
     * 4142 New extended search dialog for rulesets and rules...
